Imagenes subidas en google drive para que carge mas rapido la pagina

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,6 +1,6 @@
 #img4principal{
     background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("../img/img/IMG_0710.jpg");
+        url("https://drive.google.com/thumbnail?id=1vzz7hqtlp7adbu5YS_RQK71rISSr2tHJ");
     width: 100%;
     height: 180vh;
     background-size: cover;
