--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,8 @@
 #containerprincipalimagen{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("../img/img/DJI_0587-2.jpg");
+    background-image: linear-gradient(rgba(4, 9, 30, 0.3), rgba(4, 9, 30, 0.3)),
+        url("https://drive.google.com/thumbnail?id=1hW1vEV7t_NuAHAPC7bhFCcmha9SvDQtP");
     background-size: cover;
     background-position: center;
 }
@@ -31,7 +31,7 @@
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("../img/img/DJI_0747.jpg");
+        url("https://drive.google.com/thumbnail?id=1LxbgftHIyXHOxnfSvtVXfnCLwfOEBvTy");
     background-size: cover;
     background-position: center;
 }
@@ -39,7 +39,7 @@
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("../img/img/IMG_0706.jpg");
+        url("https://drive.google.com/thumbnail?id=1AXZZY0tWc57wopfSD34jrmlq484sGSEd");
     background-size: cover;
     background-position: center;
 }
@@ -47,14 +47,14 @@
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("../img/img/IMG_1821-Edit-Edit.jpg");
+        url("https://drive.google.com/thumbnail?id=1NHkbcb9-n-8ii6a2eJaHBtn6dOZZDOow");
     background-size: cover;
     background-position: center;
 }
 #img4principal{
     width: 65%;
     height: 100vh;
-    background-image: url("../img/img/_MG_7034.jpg");
+    background-image: url("https://drive.google.com/thumbnail?id=1b0dmk-GE7YrdsKpNg8V5E4t44Wh0wj6n");
     background-repeat: no-repeat;
     background-size: 55.5% 90%;
     background-attachment: fixed;
@@ -62,25 +62,17 @@
 }
 #img5principal{
     height: 100vh;
-    background-image: url("../img/img/download.jpeg");
+    background-image: url("https://drive.google.com/thumbnail?id=1oygfWflQILnzkFPRDthHFMVGb9fxiOQA");
     background-repeat: no-repeat;
-    background-position: right center;
+    background-size: 44.5% 90%;
     background-attachment: fixed;
+    background-position: right; 
 }
 #img6principal{
     height: 100vh;
-    background-image: url("../img/img/IMG_2143.jpg");
+    background-image: url("https://drive.google.com/thumbnail?id=1jRIFw7B8bhndRZZWWq2wcywS4NrU-gBi");
     background-repeat: no-repeat;
     background-size: 55.5% 90%;
     background-attachment: fixed;
     background-position: left;   
-}
-#img7principal{
-    width: 65%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("../img/img/DJI_0747.jpg");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
 }
