Algunas correcciones y separacion del css de los html

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -5,6 +5,7 @@
         url("https://drive.google.com/thumbnail?id=1hW1vEV7t_NuAHAPC7bhFCcmha9SvDQtP");
     background-size: cover;
     background-position: center;
+    margin-bottom: 5%;
 }
 #nameprincipal{
     color: #ffffff;
