--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,11 +1,13 @@
  #img4principal{
-        background-image: url("https://drive.google.com/thumbnail?id=1bPeftnoaNJo2Nfsf4skD4VM-nZ9fUmgs");
+        background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
+        url("../img/img/parejacontacto.jpg");
         width: 100%;
-        height: 800px;
+        height: 180vh;
         background-size: cover;
-        background-position: top;
-        background-size: 100% 100%;
+        background-position: center;
         background-attachment: fixed;
+
+
     }
     #navbarSupportedContent{
         margin-left: 50%;
@@ -30,7 +32,6 @@
         color:#d2d2d2;
     }
     #imgicondamian{
-        width: 120px;
         height: 40px;
     }
     h1{
