--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -5,6 +5,9 @@
     border-style: solid;
     border-color: white;
 }
+#footer-container{
+    margin-left: 20%;
+}
 #iconfooter{
     width: 120px;
     height: 60px;
@@ -16,7 +19,7 @@
     margin-top: 2%;
 }
 #contact-footer{
-    margin-left: calc(25%);
+    margin-left: calc(18%);
     margin-top: 2%;
     color:#ffffff;
 }
