--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,7 @@
 #containerprincipalimagen{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.3), rgba(4, 9, 30, 0.3)),
-        url("https://drive.google.com/thumbnail?id=1hW1vEV7t_NuAHAPC7bhFCcmha9SvDQtP");
+    background-image: url("../img/img/imgprincipal1.jpg");
     background-size: cover;
     background-position: center;
     margin-bottom: 5%;
@@ -17,11 +16,13 @@
     color: #ffffff;
     font-size: 50px;
     line-height: 1em;
+    margin: 2%;
 }
 .p1{
     color: #ffffff;
     font-size: 17px;
     line-height: 1em;
+    margin-top: 3%;
 }
 #imgboda1:hover{
     -webkit-transform:scale(1.3);transform:scale(1.3);
@@ -30,58 +31,55 @@
     -webkit-transform:scale(1.3);transform:scale(1.3);
 }
 #img1principal{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("https://drive.google.com/thumbnail?id=1LxbgftHIyXHOxnfSvtVXfnCLwfOEBvTy");
+    background-image: url("../img/img/quinceprincipal.jpg");
     background-size: cover;
     background-position: center;
     pointer-events: none;
 }
 #img2principal{
+    /*
     width: 100%;
     height: 100vh;
+    */
+    height: 100vh;
     background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("https://drive.google.com/thumbnail?id=1AXZZY0tWc57wopfSD34jrmlq484sGSEd");
+        url("../img/img/profesionalprincipal.jpg");
     background-size: cover;
     background-position: center;
     pointer-events: none;
 }
 #img3principal{
-    width: 100%;
-    height: 100vh;
     background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("https://drive.google.com/thumbnail?id=1NHkbcb9-n-8ii6a2eJaHBtn6dOZZDOow");
+        url("../img/img/bodaprincipal.jpg");
     background-size: cover;
     background-position: center;
     pointer-events: none;
 }
 #img4principal{
-    width: 65%;
     height: 100vh;
-    background-image: url("https://drive.google.com/thumbnail?id=1b0dmk-GE7YrdsKpNg8V5E4t44Wh0wj6n");
+    background-image: url("../img/img/captusprincipal1.jpg");
     background-repeat: no-repeat;
-    background-size: 55.5% 90%;
+    background-size: 60.5% 90%;
     background-attachment: fixed;
     pointer-events: none; /* Evitar que se descargue la imagen*/    
 }
 #img5principal{
     height: 100vh;
-    background-image: url("https://drive.google.com/thumbnail?id=1oygfWflQILnzkFPRDthHFMVGb9fxiOQA");
+    background-image: url("../img/img/quinceneraprincipal2.jpg");
     background-repeat: no-repeat;
-    background-size: 44.5% 90%;
+    background-size: 60.5% 80%;
     background-attachment: fixed;
-    background-position: right; 
-    pointer-events: none;
+    background-position: right;
+    margin-top: 2%; 
 }
 #img6principal{
     height: 100vh;
-    background-image: url("https://drive.google.com/thumbnail?id=1jRIFw7B8bhndRZZWWq2wcywS4NrU-gBi");
+    background-image: url("../img/img/noviaandnovioprincipal.jpg");
     background-repeat: no-repeat;
-    background-size: 55.5% 90%;
+    background-size: 60.5% 90%;
     background-attachment: fixed;
     background-position: left;   
-    pointer-events: none;
+    margin-top: 2%;
 }
 
 
