--- a/public/css/planes.css
+++ b/public/css/planes.css
@@ -1,11 +1,10 @@
 #img4principal{
-    background-image: url("https://drive.google.com/thumbnail?id=1RB5XUnlpkqXm85qqguk0LAI6fwM3zWWp");
-    width: 100%;
-    height: 90vh;
+
+    background-image: url("../img/img/prueba4.jpg");
+    width: 225vh;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    pointer-events: none;
 }
 #navbarSupportedContent{
     margin-left: 50%;
@@ -30,7 +29,6 @@ body{
     color:#d2d2d2;
 }
 #imgicondamian{
-    width: 120px;
     height: 40px;
 }
 #promociones-card{
@@ -59,6 +57,16 @@ p{
 
 /*Estilos para celulares*/
 @media screen and (width <=  1080px) {
+    #img4principal{
+
+        background-image: url("../img/img/prueba4.jpg");
+        width: 70vh;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        pointer-events: none;
+    }
+
     #promociones-card{
         display: block;
     }
