--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,4 +1,4 @@
-#img4principal{
+#containerimagenaboutprincipal{
     background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
         url("https://drive.google.com/thumbnail?id=1vzz7hqtlp7adbu5YS_RQK71rISSr2tHJ");
     width: 100%;
@@ -7,7 +7,8 @@
     background-position: center;
     background-attachment: fixed;
 }
-#navbarSupportedContent{
+
+navbarSupportedContent{
     margin-left: 50%;
 }
 body{
@@ -54,7 +55,7 @@ p,h5{
 }
 
 .carouselabout{
-    height: 100vh;
+    height: 400px;
 }
 
 /*Slider*/
@@ -63,7 +64,7 @@ div#slider figure img { width: 10%; margin-right: 5px; float: left; }
 
 div#slider figure { 
   position: relative;
-  width: 500%;
+  width: 400%;
   margin: 0;
   left: 0;
   text-align: left;
@@ -90,5 +91,10 @@ div#slider figure {
     #imgprincipal{
         width: 300px;
         height: 500px;
+    }
+
+    .carouselabout{
+        height: 20%;
+        width: 90%;
     }
 }
