--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,17 +1,11 @@
- #img4principal{
-        background-image: linear-gradient(rgba(4, 9, 30, 0.4), rgba(4, 9, 30, 0.4)),
-        url("../img/img/parejacontacto.jpg");
+   #containerimagencontactprincipal{
+        background-image:  url("../img/img/parejacontacto.jpg");
         width: 100%;
         height: 180vh;
         background-size: cover;
         background-position: center;
-        background-attachment: fixed;
-
-
     }
-    #navbarSupportedContent{
-        margin-left: 50%;
-    }
+    
     body{
         background-color:#060709;
     }
@@ -45,8 +39,9 @@
 /*Estilos para celualar*/
 
 @media screen and (width <=  1080px) {
-    #img4principal{
-        background-image: url("https://drive.google.com/thumbnail?id=1bPeftnoaNJo2Nfsf4skD4VM-nZ9fUmgs");
+
+    #containerimagencontactprincipal{
+        background-image:  url("../img/img/parejacontacto.jpg");
         width: 100%;
         height: 800px;
         background-size: cover;
@@ -54,6 +49,7 @@
         background-size: 100% 100%;
         background-attachment: fixed;
     }
+
 
     h1{
         color:#ffffff; 
